logs/Slang/generated/hdlconv/hdlconvertor_p137.sv.log
name: hdlconvertor_p137
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p137.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p137.sv:4:15: error: dimension requires a constant range
  byte payload[];
              ^~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p137.sv:11:5: error: language feature not yet supported
    with { p.length > 1 && p.payload.size == p.length; } );
    ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
